--- a/style/style.css
+++ b/style/style.css
@@ -93,6 +93,91 @@ margin: 0px auto;
     width: 80%;
 }
 
+/* Main Section Start */
+
+main{
+    background-color: #FFFFFF;
+}
+/* Feature-list Section Start */
+.feature-list{
+    display: flex;
+    justify-content: space-between;
+    margin: 50px 200px;
+    align-items: center;
+    gap: 4.4rem;
+    
+}
+.feature-list-image{
+    display: grid;
+    grid-template-columns: repeat(2,2fr);
+    gap: 10px;
+    
+}
+.quick-list{
+    color:  #727272;
+font-size: 2.8rem;
+font-weight: 500;
+}
+.of-our{
+    color: #131313;
+font-size: 2.8rem;
+font-weight: 700;
+}
+.features{
+    color: #FF900E;
+font-size: 2.8rem;
+font-weight: 700;
+}
+
+/* Feature-list Section End */
+/* Feature section Start */
+.feature{
+    display: flex;
+    gap: 3rem;
+    margin: 100px 240px;
+}
+.feature-content h3{
+    color:  #131313;
+font-size: 3.8rem;
+font-weight: 700;
+margin-bottom: 20px;
+}
+.card{
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px 42px 30px 30px;
+}
+.card >h4{
+    color:  #131313;
+font-size: 1.2rem;
+font-weight: 600;
+margin-bottom: 10px;
+}
+.ten-years{
+    position: relative;
+    bottom: 70px;
+    right: 50px;
+}
+.ten-years > h3 {
+    color: #FFF;
+text-align: center;
+font-size: 4rem;
+font-weight: 700;
+line-height: 70px; 
+}
+.ten-years > p {
+    color: #FFF;
+font-size: 1.5rem;
+font-weight: 500;
+line-height: 40px;
+}
+
+/* Feature section End */
+
+
+/* Main Section End */
+
 
 
 
